--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbiblio.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbiblio.tt
@@ -16,6 +16,7 @@
 </script>
 [% Asset.js("js/cataloging.js") | $raw %]
 [% Asset.js("js/browser.js") | $raw %]
+[% Asset.js("js/marceditlib.js") | $raw %]
 <script>
     var browser = KOHA.browser('[% searchid | html %]', parseInt('[% biblionumber | html %]', 10));
     browser.show();
