Bug 22322: Self check-in without log in
One should be able to return loans via SCO without
login required. This patch adds check in box where
patrons can check in their loans with barcode.

To test:
1. Set "SelfCheckoutByLogin" as "cardnumber".
2. Find patron with loan or add one.
3. Go to /cgi-bin/koha/sco/sco-main.pl
4. Return loan by passing items barcode
=> confirm loans is returned succesfully

Sponsored-by: Koha-Suomi Oy

--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/sco/help.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/sco/help.tt
@@ -18,7 +18,7 @@
 [% Asset.js("lib/modernizr.min.js") | $raw %]
 </head>
 <body id="sco_help" class="sco">
-    [% INCLUDE 'masthead-sco.inc' %]
+[% INCLUDE 'masthead-sco-self.inc' %]
 
     <div class="main">
         <div class="container-fluid">
