Bug 12133: Add requirements for guarantor and guarantee
Add three requirements when registering a new patron:

- A child patron must have a guarantor. This is controlled by
  a new syspref ChildNeedsGuarantor.
- A guarantor has to be a patron. This is controlled by
  a new syspref GuarantorHasToBePatron.
- A guarantor cannot be a guarantee.

Test plan:
-Add child patron without guarantor or child patron with guarantee
as guarantor succesfully.
- Apply this patch.
- Add a child patron with a guarantee as guarantor. Error is raised.
- Turn syspref "ChildNeedsGuarantor" ON.
- Add a child patron without a guarantor and error "Child needs a
guarantor" is raised.
- Add guarantor. Guarantor can either be existing patron or added with
"Contact" section. Save without errors.
- Turn syspref "GuarantorNeedsToBePatron" ON.
- Form fields for "Contact" section aren't displayed and only existing
patron can be added as guarantor.

Signed-off-by: Johanna Raisa <johanna.raisa@gmail.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
@@ -139,6 +139,12 @@ legend:hover {
                             <div class="dialog alert">
                                 <p>The following fields are wrong. Please fix them.</p>
                                 <ul>
+                                    [% IF ( ERROR_child_no_guarantor ) %]
+                                        <li id="ERROR_child_no_guarantor">A child patron needs a guarantor.</li>
+                                    [% END %]
+                                    [% IF ( ERROR_guarantor_is_guarantee ) %]
+                                        <li id="ERROR_guarantor_is_guarantee">A guarantor cannot be a guarantee.</li>
+                                    [% END %]
                                     [% IF ( ERROR_login_exist ) %]
                                         <li id="ERROR_login_exist">Username/password already exists.</li>
                                     [% END %]
@@ -655,7 +661,7 @@ legend:hover {
                                     [% PROCESS 'main-address-style' %]
                                 [% END # /UNLESS nostreet && nocity etc group%]
 
-                                [% UNLESS nophone && nophonepro && nomobile && noemail && noemailpro && nofax %]
+                                [% UNLESS nophone && nophonepro && nomobile && noemail && noemailpro && nofax || Koha.Preference('GuarantorHasToBePatron') %]
                                     <fieldset class="rows" id="memberentry_contact">
                                         <legend id="contact_lgd">Contact information</legend>
                                         <ol>
