--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/smart-rules.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/smart-rules.tt
@@ -140,6 +140,7 @@
                 <th>Holds per record (count)</th>
                 <th>On shelf holds allowed</th>
                 <th>OPAC item level holds</th>
+                <th>Holds pickup period (day)</th>
                 <th>Article requests</th>
                 <th>Rental discount (%)</th>
                 <th class="noExport">Actions</th>
@@ -183,8 +184,9 @@
                         [% SET article_requests = all_rules.$c.$i.article_requests %]
                         [% SET rentaldiscount = all_rules.$c.$i.rentaldiscount %]
                         [% SET decreaseloanholds = all_rules.$c.$i.decreaseloanholds %]
+                        [% SET holds_pickup_period = all_rules.$c.$i.holds_pickup_period %]
 
-                        [% SET show_rule = note || maxissueqty || maxonsiteissueqty || issuelength || daysmode || lengthunit || hardduedate || hardduedatecompare || fine || chargeperiod || chargeperiod_charge_at || firstremind || overduefinescap || cap_fine_to_replacement_price || finedays || maxsuspensiondays || suspension_chargeperiod || renewalsallowed || unseenrenewalsallowed || renewalperiod || norenewalbefore || auto_renew || no_auto_renewal_after || no_auto_renewal_after_hard_limit || reservesallowed || holds_per_day || holds_per_record || onshelfholds || opacitemholds || article_requests || rentaldiscount || decreaseloanholds %]
+                        [% SET show_rule = note || maxissueqty || maxonsiteissueqty || issuelength || daysmode || lengthunit || hardduedate || hardduedatecompare || fine || chargeperiod || chargeperiod_charge_at || firstremind || overduefinescap || cap_fine_to_replacement_price || finedays || maxsuspensiondays || suspension_chargeperiod || renewalsallowed || unseenrenewalsallowed || renewalperiod || norenewalbefore || auto_renew || no_auto_renewal_after || no_auto_renewal_after_hard_limit || reservesallowed || holds_per_day || holds_per_record || onshelfholds || opacitemholds || article_requests || rentaldiscount || decreaseloanholds || holds_pickup_period %]
                         [% IF show_rule %]
                             [% SET row_count = row_count + 1 %]
                             <tr row_countd="row_[% row_count | html %]">
@@ -332,6 +334,7 @@
                                             <span>Don't allow</span>
                                         [% END %]
                                     </td>
+                                    <td>[% holds_pickup_period | html %]</td>
                                     <td>
                                         [% IF article_requests == 'no' %]
                                             <span>No</span>
@@ -464,6 +467,7 @@
                             <option value="F">Force</option>
                         </select>
                     </td>
+                    <td><input type="text" name="holds_pickup_period" id="holds_pickup_period" size="2" /></td>
                     <td>
                         <select id="article_requests" name="article_requests">
                             <option value="no">No</option>
@@ -517,6 +521,7 @@
                       <th>Holds per record (count)</th>
                       <th>On shelf holds allowed</th>
                       <th>OPAC item level holds</th>
+                      <th>Holds pickup period (day)</th>
                       <th>Article requests</th>
                       <th>Rental discount (%)</th>
                       <th>&nbsp;</th>
