Bug 12133: Fix issues with modifying child patron and adding guarantors
Child patrons couldn't be modified when guarantor was
patron due missing guarantor_id value. Also if multiple
guarantors were added one could easily add child patron
as a guarantor.

This patch adds Instead of one guarantor id all new and
existing guarantor ids are checked in case of child patron.

To test:
1. Add child patron with syspref ChildNeedsGuarantor and
GuarantorNeedsToBePatron on.
2. Add two guarantors for the patron, first one should be
an adult patron and second a child.
3. Save patron.
=> Error "A guarantor cannot be a guarantee." should be
raised but isn't.
4. Modify patron and save.
=> Error "Child needs guarantor" is raised even if (valid)
guarantor exists.
5. Apply patch.
6. Repeat steps 1 to 4.
=> This time while saving a new patron error "A guarantor
cannot be a guarantee." is raised but modifying is
successful.

Sponsored-by: Koha-Suomi Oy

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
@@ -597,7 +597,7 @@ legend:hover {
                                         </fieldset> <!-- /#memberentry_guarantor -->
                                     </div> <!-- #/memberentry_guarantor_anchor -->
 
-                                    [% UNLESS nocontactname && nocontactfirstname && norelationship %]
+                                    [% UNLESS nocontactname && nocontactfirstname && norelationship || Koha.Preference('GuarantorHasToBePatron') %]
                                         <fieldset class="rows" id="non_patron_guarantor">
                                             <legend>Non-patron guarantor</legend>
                                             <ol>
@@ -661,7 +661,7 @@ legend:hover {
                                     [% PROCESS 'main-address-style' %]
                                 [% END # /UNLESS nostreet && nocity etc group%]
 
-                                [% UNLESS nophone && nophonepro && nomobile && noemail && noemailpro && nofax || Koha.Preference('GuarantorHasToBePatron') %]
+                                [% UNLESS nophone && nophonepro && nomobile && noemail && noemailpro && nofax %]
                                     <fieldset class="rows" id="memberentry_contact">
                                         <legend id="contact_lgd">Contact information</legend>
                                         <ol>
