--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
@@ -908,7 +908,10 @@
                 [% ELSIF borrowernumber # IF patron %]
                     <div class="dialog message">Patron not found. <a href="/cgi-bin/koha/members/members-home.pl">Return to search</a></div>
                 [% END # /IF patron %]
-
+                <!-- ILL -->
+                <div class="yui-g">
+                    <div id="ill_ajax"></div>
+                </div>
                 </div> <!-- /.col-sm-10.col-sm-push-2 -->
 
                 [% IF Koha.Preference('CircSidebar') %]
@@ -989,7 +992,7 @@
     <script>
         columns_settings_issues_table = [% TablesSettings.GetColumns( 'circ', 'circulation', 'issues-table', 'json' ) | $raw %]
         columns_settings_borrowers_table = [% TablesSettings.GetColumns( 'circ', 'circulation', 'table_borrowers', 'json' ) | $raw %]
-
+        $('#ill_ajax').load('/cgi-bin/koha/circ/get_ill.pl?bnumber=[% patron.borrowernumber | html %]');
         [% IF borrowernumber and patron %]
             if( Cookies.get("holdfor") != [% patron.borrowernumber | html %]){
                 Cookies.remove("holdfor", { path: '/' });
