--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/library_groups.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/library_groups.tt
@@ -147,6 +147,12 @@
                                         Is local hold group
                                     </label>
                                 </p>
+                                <p>
+                                    <label>
+                                        <input type="checkbox" name="ft_local_float_group" id="add-group-modal-ft_local_float_group" value="1" />
+                                        Is local float group
+                                    </label>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -209,6 +215,12 @@
                                     <label>
                                         <input type="checkbox" id="edit-group-modal-ft_local_hold_group" name="ft_local_hold_group" value="1" />
                                         Is local hold group
+                                    </label>
+                                </p>
+                                <p>
+                                    <label>
+                                        <input type="checkbox" id="edit-group-modal-ft_local_float_group" name="ft_local_float_group" value="1" />
+                                        Is local float group
                                     </label>
                                 </p>
                             </div>
@@ -291,7 +303,8 @@
                 var ft_search_groups_opac = $(this).data('groupFt_search_groups_opac');
                 var ft_search_groups_staff = $(this).data('groupFt_search_groups_staff');
                 var ft_local_hold_group = $(this).data('groupFt_local_hold_group');
-                edit_group( id, parent_id, title, description, ft_hide_patron_info, ft_search_groups_opac, ft_search_groups_staff, ft_local_hold_group );
+                var ft_local_float_group = $(this).data('groupFt_local_float_group');
+                edit_group( id, parent_id, title, description, ft_hide_patron_info, ft_search_groups_opac, ft_search_groups_staff, ft_local_hold_group, ft_local_float_group );
             });
 
             $('.delete-group').on('click', function(e) {
@@ -327,6 +340,7 @@
             $('#add-group-modal-ft_search_groups_opac').prop('checked', false);
             $('#add-group-modal-ft_search_groups_staff').prop('checked', false);
             $('#add-group-modal-ft_local_hold_group').prop('checked', false);
+            $('#add-group-modal-ft_local_float_group').prop('checked', false);
             if ( parent_id ) {
                 $('#root-group-features-add').hide();
             } else {
@@ -336,22 +350,24 @@
 
         }
 
-        function edit_group( id, parent_id, title, description, ft_hide_patron_info, ft_search_groups_opac, ft_search_groups_staff, ft_local_hold_group ) {
+        function edit_group( id, parent_id, title, description, ft_hide_patron_info, ft_search_groups_opac, ft_search_groups_staff, ft_local_hold_group, ft_local_float_group ) {
             $('#edit-group-modal-id').val( id );
             $('#edit-group-modal-title').val( title );
             $('#edit-group-modal-description').val( description );
-
+            console.log(ft_local_float_group);
             if ( parent_id ) {
                 $('#edit-group-modal-ft_hide_patron_info').prop('checked', false);
                 $('#edit-group-modal-ft_search_groups_opac').prop('checked', false);
                 $('#edit-group-modal-ft_search_groups_staff').prop('checked', false);
                 $('#edit-group-modal-ft_local_hold_group').prop('checked', false);
+                $('#edit-group-modal-ft_local_float_group').prop('checked', false);
                 $('#root-group-features-edit').hide();
             } else {
                 $('#edit-group-modal-ft_hide_patron_info').prop('checked', ft_hide_patron_info ? true : false );
                 $('#edit-group-modal-ft_search_groups_opac').prop('checked', ft_search_groups_opac ? true : false );
                 $('#edit-group-modal-ft_search_groups_staff').prop('checked', ft_search_groups_staff ? true : false );
                 $('#edit-group-modal-ft_local_hold_group').prop('checked', ft_local_hold_group ? true : false );
+                $('#edit-group-modal-ft_local_float_group').prop('checked', ft_local_float_group ? true : false );
                 $('#root-group-features-edit').show();
             }
 
@@ -407,6 +423,9 @@
                 [% IF group.ft_local_hold_group %]
                     <li>Is local hold group</li>
                 [% END %]
+                [% IF group.ft_local_float_group %]
+                    <li>Is local float group</li>
+                [% END %]
               </ul>
             [% END %]
         </td>
@@ -424,7 +443,7 @@
                        </li>
 
                         <li>
-                            <a class="edit-group" id="edit-group-[% group.id | html %]" href="#" data-group-id="[% group.id | html %]" data-group-parent-id="[% group.parent_id | html %]" data-group-title="[% group.title | html %]" data-group-description="[% group.description | html %]" data-group-ft_hide_patron_info="[% group.ft_hide_patron_info | html %]" data-group-ft_search_groups_opac="[% group.ft_search_groups_opac | html %]" data-group-ft_search_groups_staff="[% group.ft_search_groups_staff | html %]" data-group-ft_local_hold_group="[% group.ft_local_hold_group | html %]" >
+                            <a class="edit-group" id="edit-group-[% group.id | html %]" href="#" data-group-id="[% group.id | html %]" data-group-parent-id="[% group.parent_id | html %]" data-group-title="[% group.title | html %]" data-group-description="[% group.description | html %]" data-group-ft_hide_patron_info="[% group.ft_hide_patron_info | html %]" data-group-ft_search_groups_opac="[% group.ft_search_groups_opac | html %]" data-group-ft_search_groups_staff="[% group.ft_search_groups_staff | html %]" data-group-ft_local_hold_group="[% group.ft_local_hold_group | html %]" data-group-ft_local_float_group="[% group.ft_local_float_group | html %]" >
                                 <i class="fa fa-pencil"></i> Edit
                             </a>
                        </li>
